# tpmp-lab4-work

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
_posts/: 2026-03-22-title.md
database/: tourist_bureau.db  tourist_bureau.sql
docs/: additional.html  database.html  functional.html  glossary.html  index.html  presentation.html  repository.html  specification.html  training.html
includes/: auth.h  bus_service.h  database.h  menu.h  models.h  report_service.h  route_service.h  trip_service.h
sql/: init.sql
src/: auth.cpp  bus_service.cpp  database.cpp  main.cpp  menu.cpp  report_service.cpp  route_service.cpp  trip_service.cpp
tests/: CMakeLists.txt  test_auth.cpp  test_bus_service.cpp  test_database.cpp  test_report_service.cpp  test_route_service.cpp  test_trip_service.cpp
